@@ -5,12 +5,13 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
@@ -22,39 +23,33 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     }
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request,
-                                    HttpServletResponse response,
-                                    FilterChain filterChain)
+    protected void doFilterInternal(
+            HttpServletRequest request,
+            HttpServletResponse response,
+            FilterChain filterChain)
             throws ServletException, IOException {
 
-        System.out.println("JWT FILTER EXECUTED");
-
         String authHeader = request.getHeader("Authorization");
-
-        System.out.println("HEADER = " + authHeader);
 
         if (authHeader != null &&
                 authHeader.startsWith("Bearer ")) {
 
             String token = authHeader.substring(7);
 
-            System.out.println("TOKEN = " + token);
-
-            boolean valid = jwtUtil.validateToken(token);
-
-            System.out.println("VALID = " + valid);
-
-            if (valid) {
+            if (jwtUtil.validateToken(token)) {
 
                 String email = jwtUtil.extractEmail(token);
-
-                System.out.println("Authenticated User: " + email);
+                String role = jwtUtil.extractRole(token);
 
                 UsernamePasswordAuthenticationToken authentication =
                         new UsernamePasswordAuthenticationToken(
                                 email,
                                 null,
-                                Collections.emptyList()
+                                List.of(
+                                        new SimpleGrantedAuthority(
+                                                "ROLE_" + role
+                                        )
+                                )
                         );
 
                 SecurityContextHolder
